adding edited calendar scripts
Signed-off-by: Your GitHub Username <your.email@example.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 ansible/
 
 # Google Calendar credentials
-credentials.json
-token.pickle
+calendarcredentials.json
+calendartoken.pickle
 
 # Logs
 *.log
